[tool.poetry]
name = "pycdn"
version = "0.0.1"
description = "A ligthweight, fast, easy to use python package that helps you create a CDN."
authors = ["FrostiiWeeb"]

[tool.poetry.dependencies]
python = "^3.8.10"
aiohttp = "^3.8.1"
asyncpg = "^0.25.0"
loguru =  "^0.6.0"
python-magic = "^0.4.27"
erlpack = "^0.3.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
